// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Embed /> should render with children as loading component 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <span
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Loading />
  </span>
  <iframe
    src="https://www.example.com"
    title="embedded iframe"
  />
</div>
`;

exports[`<Embed /> should render with default loading component 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <span
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "display": "flex",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div>
      Loading…
    </div>
  </span>
  <iframe
    src="https://www.example.com"
    title="embedded iframe"
  />
</div>
`;
